--- a/src/components/reusable/queryBuilder/queryBuilderGroup.scss
+++ b/src/components/reusable/queryBuilder/queryBuilderGroup.scss
@@ -20,7 +20,7 @@
   }
 
   &--disabled {
-    opacity: 0.8;
+    opacity: 0.9;
   }
 
   &--depth-0 {
